--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,128 +1,113 @@
+# The find_package macro for Orocos-RTT works best with
+# cmake >= 2.6.3
 cmake_minimum_required(VERSION 2.8.3)
+# This creates a standard cmake project. You may extend this file with
+# any cmake macro you see fit.
 project(kdl_controllers)
 
-## Find catkin macros and libraries
-## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
-## is used, also find other catkin packages
-find_package(catkin REQUIRED)
-
-## System dependencies are found with CMake's conventions
-# find_package(Boost REQUIRED COMPONENTS system)
+# Do setup in case of ros package, If ROS_ROOT is set, it is
+# recommended to use RTT/OCL through the ros packages.
+#
+find_package(catkin COMPONENTS hardware_interface kdl_urdf_tools terse_roscpp controller_manager
+       control_toolbox rospy xenomai_ros)
 
 
-## Uncomment this if the package has a setup.py. This macro ensures
-## modules and global scripts declared therein get installed
-## See http://ros.org/doc/groovy/api/catkin/html/user_guide/setup_dot_py.html
-# catkin_python_setup()
+if (Xenomai_FOUND)
+  include_directories(include ${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIR} )
 
-#######################################
-## Declare ROS messages and services ##
-#######################################
+# Set the CMAKE_PREFIX_PATH in case you're not using Orocos through ROS
+# for helping these find commands find RTT.
+#----find_package(OROCOS-RTT REQUIRED ${RTT_HINTS})
 
-## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   Message1.msg
-#   Message2.msg
-# )
+find_package(Eigen REQUIRED)
+include_directories(${EIGEN_INCLUDE_DIRS})
+add_definitions(${EIGEN_DEFINITIONS})
 
-## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
-#   Service1.srv
-#   Service2.srv
-# )
+# Add xenomai flags
+add_xenomai_flags()
+
+add_library(kdl_controllers src/inverse_dynamics_controller.cpp
+             include/irk_controllers/controllers/inverse_dynamics_controller.h)
+
+#add_definitions(-D__XENO__)
+#--------add_executable(wam_server src/wam_server.cpp)
+target_link_libraries(wam_server xenomai native rtdm kdl_controller)
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   std_msgs  # Or other packages containing msgs
-# )
+generate_messages(
+  #TODO DEPENDENCIES geometry_msgs std_msgs
+  )
 
-###################################
-## catkin specific configuration ##
-###################################
-## The catkin_package macro generates cmake config files for your package
-## Declare things to be passed to dependent projects
-## LIBRARIES: libraries you create in this project that dependent projects also need
-## CATKIN_DEPENDS: catkin_packages dependent projects also need
-## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-#  INCLUDE_DIRS include
-#  LIBRARIES kdl_controllers
-#  CATKIN_DEPENDS other_catkin_pkg
-#  DEPENDS system_lib
-)
+  DEPENDS hardware_interface irk_simulation irk_model kdl_urdf_tools terse_roscpp controller_manager control_toolbox rospy
+  CATKIN_DEPENDS # TODO
+  INCLUDE_DIRS # TODO include
+  LIBRARIES # TODO
+  )
 
-###########
-## Build ##
-###########
+endif()
+#-----------------------------------------------------------
 
-## Specify additional locations of header files
-## Your package locations should be listed before other locations
-# include_directories(include ${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
+# Defines the orocos_* cmake macros. See that file for additional
+# documentation.
+#-----include(${OROCOS-RTT_USE_FILE_PATH}/UseOROCOS-RTT.cmake)
 
-## Declare a cpp library
-# add_library(kdl_controllers
-#   src/${PROJECT_NAME}/kdl_controllers.cpp
-# )
+#
+# Components, types and plugins.
+#
+# The CMake 'target' names are identical to the first argument of the
+# macros below, except for orocos_typegen_headers, where the target is fully
+# controlled by generated code of 'typegen'.
+#
 
-## Declare a cpp executable
-# add_executable(kdl_controllers_node src/kdl_controllers_node.cpp)
+# Creates a component library libcontrollerman_controllers-<target>.so
+# and installs in the directory lib/orocos/controllerman_controllers/
+#-----orocos_component(controllerman_controllers_components
+#-----  src/inverse_dynamics_controller.cpp
+#  ) # ...you may add multiple source files
+# You may add multiple orocos_component statements.
 
-## Add cmake target dependencies of the executable/library
-## as an example, message headers may need to be generated before nodes
-# add_dependencies(kdl_controllers_node kdl_controllers_generate_messages_cpp)
+# Additional headers:
+# Installs in the include/orocos/controllerman_controllers/ directory
+#----orocos_install_headers(
+#----- include/irk_controllers/controllers/trivial.h
+#  ) # ...you may add multiple header files
+# You may add multiple orocos_install_headers statements.
 
-## Specify libraries to link a library or executable target against
-# target_link_libraries(kdl_controllers_node
-#   ${catkin_LIBRARIES}
-# )
+# Building a Plugin
+# Creates a plugin library libcontrollerman_controllers-plugin-<target>.so
+# and installs in the directory lib/orocos/controllerman_controllers/plugins/
+# Be aware that a plugin may only have the loadRTTPlugin() function once defined in a .cpp file.
+# This function is defined by the plugin and service CPP macros.
+##orocos_plugin(controllerman_controllers-plugin controllerman_controllers-plugin.cpp) # ...only one plugin function per library !
+# You may add multiple orocos_plugin statements.
 
-#############
-## Install ##
-#############
 
-# all install targets should use catkin DESTINATION variables
-# See http://ros.org/doc/groovy/api/catkin/html/adv_user_guide/variables.html
+# Building a Service:
+# Creates a plugin library libcontrollerman_controllers-service-<target>.so
+# and installs in the directory lib/orocos/controllerman_controllers/plugins/
+##orocos_service(controllerman_controllers-service controllerman_controllers-service.cpp) # ...only one service per library !
+# You may add multiple orocos_service statements.
 
-## Mark executable scripts (Python etc.) for installation
-## in contrast to setup.py, you can choose the destination
-# install(PROGRAMS
-#   scripts/my_python_script
-#   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
 
-## Mark executables and/or libraries for installation
-# install(TARGETS kdl_controllers kdl_controllers_node
-#   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
+# Building a typekit (recommended):
+# Creates a typekit library libcontrollerman_controllers-types-<target>.so
+# and installs in the directory lib/orocos/controllerman_controllers/types/
+##orocos_typegen_headers(controllerman_controllers-types.hpp) # ...you may add multiple header files
+# You may only have *ONE* orocos_typegen_headers statement !
 
-## Mark cpp header files for installation
-# install(DIRECTORY include/${PROJECT_NAME}/
-#   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
-#   FILES_MATCHING PATTERN "*.h"
-#   PATTERN ".svn" EXCLUDE
-# )
 
-## Mark other files for installation (e.g. launch and bag files, etc.)
-# install(FILES
-#   # myfile1
-#   # myfile2
-#   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
-# )
+# Building a normal library (optional):
+# Creates a library libsupport-<target>.so and installs it in
+# lib/
+##orocos_library(support support.cpp) # ...you may add multiple source files
+# You may add multiple orocos_library statements.
 
-#############
-## Testing ##
-#############
 
-## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_kdl_controllers.cpp)
-# if(TARGET ${PROJECT_NAME}-test)
-#   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
-# endif()
+# Generates and installs our package. Must be the last statement such
+# that it can pick up all above settings.
+#------orocos_generate_package()
 
-## Add folders to be run by python nosetests
-# catkin_add_nosetests(test)
+
+
+
