--- a/package.xml
+++ b/package.xml
@@ -1,53 +1,70 @@
-<?xml version="1.0"?>
 <package>
   <name>kdl_controllers</name>
-  <version>0.0.0</version>
-  <description>The kdl_controllers package</description>
+  <version>2.6.3</version>
+  <description>This package contains OROCOS/RTT components for performing robotic
+    manipulator control </description>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
-  <!-- Example:  -->
-  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="isan@todo.todo">isan</maintainer>
+  <maintainer email="ish.sanchez12@gmail.com"> Ish Sanchez</maintainer>
+
+  <license>BSD</license>
+
+  <url type="websit">http://github.com/isanchez12/kdl_controllers</url> 
+
+  <author>Ish Sanchez</author>
+
+ <build_depend>kdl</build_depend> 
+   <build_depend>kdl_parser</build_depend> 
+   <build_depend>rtt</build_depend> 
+   <build_depend>rtt_rosnode</build_depend> 
+   <build_depend>std_msgs</build_depend> 
+   <build_depend>sensor_msgs</build_depend> 
+   <build_depend>rtt_cartesian_trajectory_msgs</build_depend> 
+   <build_depend>rtt_controllerman_msgs</build_depend> 
+   <build_depend>geometry_msgs</build_depend> 
+   <build_depend>trajectory_msgs</build_depend> 
+   <build_depend>tf</build_depend> 
+   <build_depend>tf_conversions</build_depend> 
+   <build_depend>angles</build_depend> 
+   <build_depend>cartesian_trajectory_msgs</build_depend> 
+   <build_depend>rtt_ros_tools</build_depend> 
+   <build_depend>kdl_urdf_tools</build_depend> 
+   
+   <run_depend>kdl</run_depend> 
+   <run_depend>kdl_parser</run_depend> 
+   <run_depend>rtt</run_depend> 
+   <run_depend>rtt_rosnode</run_depend> 
+   <run_depend>std_msgs</run_depend> 
+   <run_depend>sensor_msgs</run_depend> 
+   <run_depend>rtt_cartesian_trajectory_msgs</run_depend> 
+   <run_depend>rtt_controllerman_msgs</run_depend> 
+   <run_depend>geometry_msgs</run_depend> 
+   <run_depend>trajectory_msgs</run_depend> 
+   <run_depend>tf</run_depend> 
+   <run_depend>tf_conversions</run_depend> 
+   <run_depend>angles</run_depend> 
+   <run_depend>cartesian_trajectory_msgs</run_depend> 
+   <run_depend>rtt_ros_tools</run_depend> 
+   <run_depend>kdl_urdf_tools</run_depend> 
+   
+   <!-- <test_depend>kdl</test_depend> --> 
+   <!-- <test_depend>kdl_parser</test_depend>--> 
+   <!-- <test_depend>rtt</test_depend> -->
+   <!-- <test_depend>rtt_rosnode</test_depend> -->
+   <!-- <test_depend>std_msgs</test_depend> -->
+   <!-- <test_depend>sensor_msgs</test_depend> -->
+   <!-- <test_depend>rtt_cartesian_trajectory_msgs</test_depend> -->
+   <!-- <test_depend>rtt_controllerman_msgs</test_depend> -->
+   <!-- <test_depend>geometry_msgs</test_depend> -->
+   <!-- <test_depend>trajectory_msgs</test_depend> -->
+   <!-- <test_depend>tf</test_depend> -->
+   <!-- <test_depend>tf_conversions</test_depend> -->
+   <!-- <test_depend>angles</test_depend> -->
+   <!-- <test_depend>cartesian_trajectory_msgs</test_depend> -->
+   <!-- <test_depend>rtt_ros_tools</test_depend> -->
+   <!-- <test_depend>kdl_urdf_tools</test_depend> -->
 
 
-  <!-- One license tag required, multiple allowed, one license per tag -->
-  <!-- Commonly used license strings: -->
-  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>TODO</license>
-
-
-  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
-  <!-- Optional attribute type can be: website, bugtracker, or repository -->
-  <!-- Example: -->
-  <!-- <url type="website">http://ros.org/wiki/kdl_controllers</url> -->
-
-
-  <!-- Author tags are optional, mutiple are allowed, one per tag -->
-  <!-- Authors do not have to be maintianers, but could be -->
-  <!-- Example: -->
-  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
-
-
-  <!-- The *_depend tags are used to specify dependencies -->
-  <!-- Dependencies can be catkin packages or system dependencies -->
-  <!-- Examples: -->
-  <!-- Use build_depend for packages you need at compile time: -->
-  <!--   <build_depend>message_generation</build_depend> -->
-  <!-- Use buildtool_depend for build tool packages: -->
-  <!--   <buildtool_depend>catkin</buildtool_depend> -->
-  <!-- Use run_depend for packages you need at runtime: -->
-  <!--   <run_depend>message_runtime</run_depend> -->
-  <!-- Use test_depend for packages you need only for testing: -->
-  <!--   <test_depend>gtest</test_depend> -->
-  <buildtool_depend>catkin</buildtool_depend>
-
-
-  <!-- The export tag contains other, unspecified, tags -->
   <export>
-    <!-- You can specify that this package is a metapackage here: -->
-    <!-- <metapackage/> -->
-
-    <!-- Other tools can request additional information be placed here -->
 
   </export>
 </package>
