--- a/package.xml
+++ b/package.xml
@@ -32,6 +32,8 @@
   <build_depend>kdl_urdf_tools</build_depend> 
   <build_depend>orocos_kdl</build_depend>
 
+  <build_depend>controller_interface</build_depend>
+
   <run_depend>kdl</run_depend> 
   <run_depend>kdl_parser</run_depend> 
   <run_depend>rtt</run_depend> 
@@ -48,6 +50,8 @@
   <run_depend>cartesian_trajectory_msgs</run_depend> 
   <run_depend>rtt_ros_tools</run_depend> 
   <run_depend>kdl_urdf_tools</run_depend> 
+
+  <run_depend>controller_interface</run_depend>
 
   <!-- <test_depend>kdl</test_depend> --> 
   <!-- <test_depend>kdl_parser</test_depend>--> 
