--- a/package.xml
+++ b/package.xml
@@ -18,12 +18,17 @@
   <build_depend>realtime_tools</build_depend> 
   <build_depend>urdf</build_depend> 
   <build_depend>forward_command_controller</build_depend>
-
+  <build_depend>kdl_urdf_tools</build_depend>
+  <!--
+  'kdl"
+  'kdl_parser"
+-->
   <run_depend>controller_interface</run_depend> 
   <run_depend>controllers_msgs</run_depend> 
   <run_depend>realtime_tools</run_depend> 
   <run_depend>urdf</run_depend> 
   <run_depend>forward_command_controller</run_depend>
+  <run_depend>kdl_urdf_tools</run_depend>
 
   <export>
     <controller_interface plugin="${prefix}/kdl_controller_plugins.xml"/>
