--- a/package.xml
+++ b/package.xml
@@ -23,6 +23,8 @@
   <build_depend>orocos_kdl</build_depend>
   <build_depend>roscpp</build_depend>
 
+  <build_depend>sensor_msgs</build_depend>
+
   <run_depend>controller_interface</run_depend> 
   <run_depend>control_msgs</run_depend> 
   <run_depend>realtime_tools</run_depend> 
@@ -32,6 +34,9 @@
   <run_depend>pluginlib</run_depend>
   <run_depend>orocos_kdl</run_depend>
   <run_depend>roscpp</run_depend>
+
+  <run_depend>sensor_msgs</run_depend>
+  
   <export>
     <controller_interface plugin="${prefix}/kdl_controller_plugins.xml"/>
   </export>
